--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <h1>Pip-Boy 3000</h1>
 
     <ul class="nav">
-      <li><a href="factions.html">Бестиарий</a></li>
+      <li><a href="faction.html">Бестиарий</a></li>
       <li><a href="goddesses.html">Богини</a></li>
       <li><a href="bestiary.html">Фракции</a></li>
       <li><a href="lore.html">Лор</a></li>
